# vrs

./: .gitignore  Cargo.toml  compile_shaders.sh
models/: cube.glb  house.glb  monkey.glb
shaders/: ambient.frag  compose.frag  directional.frag  mesh.frag  mesh.vert
src/: camera.rs  command_buffer.rs  frame.rs  framebuffer.rs  instance.rs  logical_device.rs  main.rs  mesh.rs  pipeline.rs  scene.rs  shader.rs  surface.rs  swapchain.rs  utils.rs  validation.rs
src/input/: device_input_state.rs  input_state.rs  mod.rs
src/rendering/: ambient_lighting_system.rs  buffer.rs  command_buffer.rs  composition_system.rs  device.rs  frame.rs  frame_system.rs  framebuffer.rs  image.rs  instance.rs  mesh.rs  mesh_draw_system.rs  mod.rs  pipeline.rs  prelude.rs  screen_quad.rs  shader.rs  surface.rs  swapchain.rs  utils.rs  validation.rs
src/rendering/frame/: deferred_render_pass.rs  frame_logic.rs  graphics_pipeline_layout.rs  mod.rs
src/rendering/lighting_systems/: ambient.rs  directional.rs  mod.rs
