[package]
name = "vrs"
version = "0.1.0"
authors = ["Rexagon <reide740@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ash = "0.31"
ash-window = "0.5"
bytemuck = "1"
env_logger = "0.7"
gltf = { version = "0.15", features = ["utils"] }
log = "0.4"
memoffset = "0.5"
nalgebra = "0.20"
nalgebra-glm = "0.7"
num = "0.3"
once_cell = "1.4"
image = "0.23"
itertools = "0.9"
winit = "0.22"

[profile.release]
lto = true
